exports[`SelectSortBy should render 1`] = `
<ul
  className="nav"
  role={null}>
  <label
    active={undefined}
    activeHref={undefined}
    activeKey={undefined}
    className="navbar-text"
    htmlFor={undefined}
    onSelect={null}>
    Sort by:
  </label>
  <li
    className="dropdown"
    style={undefined}>
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href=""
      id={42}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button">
      Name
       
      <span
        className="caret" />
    </a>
    <ul
      aria-labelledby={42}
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          Name
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          Name
        </a>
      </li>
    </ul>
  </li>
  <button
    activeHref={undefined}
    activeKey={undefined}
    className="navbar-btn btn btn-link"
    disabled={false}
    id={undefined}
    onClick={[Function]}
    onSelect={null}
    role="button"
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-sort-asc"
      title={null} />
    ASCENDING
  </button>
</ul>
`;

exports[`SelectSortBy should render id if provided 1`] = `
<ul
  className="nav"
  role={null}>
  <label
    active={undefined}
    activeHref={undefined}
    activeKey={undefined}
    className="navbar-text"
    htmlFor="toolbar-sort-by"
    onSelect={null}>
    Sort by:
  </label>
  <li
    className="dropdown"
    style={undefined}>
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href=""
      id="toolbar-sort-by"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button">
      Name
       
      <span
        className="caret" />
    </a>
    <ul
      aria-labelledby="toolbar-sort-by"
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id="toolbar-sort-by-item-Name"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          Name
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id="toolbar-sort-by-item-Name"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          Name
        </a>
      </li>
    </ul>
  </li>
  <button
    activeHref={undefined}
    activeKey={undefined}
    className="navbar-btn btn btn-link"
    disabled={false}
    id="toolbar-sort-order"
    onClick={[Function]}
    onSelect={null}
    role="button"
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-sort-asc"
      title={null} />
    ASCENDING
  </button>
</ul>
`;

exports[`SelectSortBy should render without sortBy selected 1`] = `
<ul
  className="nav"
  role={null}>
  <label
    active={undefined}
    activeHref={undefined}
    activeKey={undefined}
    className="navbar-text"
    htmlFor={undefined}
    onSelect={null}>
    Sort by:
  </label>
  <li
    className="dropdown"
    style={undefined}>
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href=""
      id={42}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button">
      N.C
       
      <span
        className="caret" />
    </a>
    <ul
      aria-labelledby={42}
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          Name
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          Label
        </a>
      </li>
    </ul>
  </li>
  <button
    activeHref={undefined}
    activeKey={undefined}
    className="navbar-btn btn btn-link"
    disabled={false}
    id={undefined}
    onClick={[Function]}
    onSelect={null}
    role="button"
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-sort-asc"
      title={null} />
    ASCENDING
  </button>
</ul>
`;
